syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "GrpcServiceUser.ReceiveAddress";

service AddressGrpc{
	rpc GetAllOfUser(Id) returns (ReceiveAddresses);
	rpc GetOne(Id) returns (ReceiveAddress);
	rpc Create(CreateReceiveAddress) returns (Response);
	rpc Update(ReceiveAddress) returns (Response);
	rpc Delete(Id) returns (Response);
}

message Id{
	string SearchId = 1;
}

message CreateReceiveAddress{
	google.protobuf.StringValue UserId = 1;
	google.protobuf.StringValue Address = 2;
	google.protobuf.StringValue Receiver = 3;
	google.protobuf.StringValue PhoneReceive = 4;
	google.protobuf.StringValue Note = 5;
}

message ReceiveAddress{
	google.protobuf.StringValue Id = 1;
	google.protobuf.StringValue UserId = 2;
	google.protobuf.StringValue Address = 3;
	google.protobuf.StringValue Receiver = 4;
	google.protobuf.StringValue PhoneReceive = 5;
	google.protobuf.StringValue Note = 6;
	google.protobuf.Timestamp CreateAt = 7;
	google.protobuf.Timestamp UpdateAt = 8;
}

message ReceiveAddresses{
	repeated ReceiveAddress Item = 1;
}

message Response {
	int32 StatusCode = 1;
	google.protobuf.StringValue Message = 2;
}